--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,12 +37,28 @@
         </article>
         <article class="clasico">
             <h2 class="vincentuno">Vincent van gogh </h2>
-            <img src="./Imagenes-para-proyecto/thebedroom.jpg" alt="Bedroom" class="bedroom">
-            <img src="./Imagenes-para-proyecto/nocheestrellada.jpg" alt="Noche estrellada" class="noche">
-            <p>Vincent Willem van Gogh was a Dutch Post-Impressionist painter who is among the most famous and influential figures in the history of Western art. In just over a decade he created approximately 2100 artworks, including around 860 oil paintings, most of them in the last two years of his life.</p>
+            <ul>
+                <li>
+                    <img src="./Imagenes-para-proyecto/thebedroom.jpg" alt="Bedroom" class="bedroom">
+                    <p>To Van Gogh this picture was an expression of 'perfect rest', or 'sleep in general'. The bright, cheerful little room has become a field of rapid convergences, sharp angles, and contrasts of high color. The perspective vision of the walls and bed is as exciting as one of his deep landscapes, where we are carried headlong to the horizon. But in such a view with 'a rushing series of lines, furrows rising high on the canvas', Van Gogh found an expression of 'calmness, of great peace.' These surprising reactions permit us to see the spontaneous intensification of movement in his rendering of things. For his high-strung nature, the most relaxed perceptions were already charged and restless. But his feeling of repose in paintings so full of movement is also the outcome of a kind of cathartic process; by projecting movement into nature, he is relieved of tensions and wins a real peace.</p>
+                </li>
+                <li>                
+                    <img src="./Imagenes-para-proyecto/nocheestrellada.jpg" alt="Noche estrellada" class="noche">
+                    <p>Starry Night depicts a dreamy interpretation of the artist's asylum room's sweeping view of Saint-Rémy-de-Provence. Though Van Gogh revisited this scene in his work on several occasions, "Starry Night" is the only nocturnal study of the view. Thus, in addition to descriptions evident in the myriad of letters he wrote to his brother, Theo, it offers a rare nighttime glimpse into what the artist saw while in isolation. "Through the iron-barred window I can make out a square of wheat in an enclosure," he wrote in May of 1889, "above which in the morning I see the sunrise in its glory."</p>
+                </li>
+                <p>Vincent Willem van Gogh was a Dutch Post-Impressionist painter who is among the most famous and influential figures in the history of Western art. In just over a decade he created approximately 2100 artworks, including around 860 oil paintings, most of them in the last two years of his life.</p>
+            </ul>
+            <a href="https://www.vincentvangogh.org/">Vincent Van Gogh</a>
         </article>
     </section>
-    <form action="contacto">Contacto</form>
+    <form class="formulariobasico" action="" method="post">
+        <label for="nombre">Nombre</label>
+        <input type="text" name="Nombre" id="nombreuno">
+        <label for="telefono">Telefono</label>
+        <input type="number" name="Telefono" id="telefonouno">
+        <label for="email">Email</label>
+        <input type="email" name="Email" id="emailuno">
+    </form>
     <footer>
         <p class="footeruno"> Created by Marcia Fernandez</p>
         <p class="footeruno">Contact Information</p>
