--- a/index.html
+++ b/index.html
@@ -6,17 +6,74 @@
     <title>Galeria de Arte</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <!-- Consultar si el orden de los links de animaciones y bootstrap afectan a la codificacion en general-->
 </head>
 <body>
-    <header> El arte expresado a traves de la niñez</header>
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> 
+    <!-- Preguntar si hay que poner algun texto que identifique el link de script-->
+    <header class="animate__animated animate__bounce"> El arte expresado a traves de la niñez</header>
     <section>
-        <nav class="menudesplegable">  
-            <article class="home">Home</article>
-            <article class="contenido">Contenido</article>
-            <article class="menu">Menú</article>
-        </nav>
+        <section class="menudesplegable">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Menu</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Contenido
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Biografia de artistas</a></li>
+                            <li><a class="dropdown-item" href="#">Obras famosas</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Adaptaciones para el aula</a></li>
+                        </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                    </div>
+                </div>
+                </nav>
+        </section>
         <img src="./Imagenes-para-proyecto/vincentretrato.jpg" alt="Vincent" class="vincent">
     </section>
+    <main>
+        <section class="carrousel animate__animated animate__backInLeft">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="./Imagenes-para-proyecto/friends.jpg" class="d-block" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="./Imagenes-para-proyecto/peopleatpeace.jpg" class="d-block" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="./Imagenes-para-proyecto/hug.jpg" class="d-block" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                </div>
+        </section>
+    </main>
     <section class="pintores">
         <article class="contemporaneo">
             <h2 class="romero">Romero Britto</h2>
@@ -34,17 +91,18 @@
                     <p class="formulatext">Romero Britto's daring combinations of color, size, pattern and prospective are quite deliberate. The varied thickness of Britto's black outlines enhance the depth and form of his subjects. The precise stripes and polka dots create textures that further describe the subject matter as three-dimensional characters and places. Most distinctive is Romero Britto's own signature as a design element in each of his canvases since 1992. These elements combine to create a style that is fresh and invigorating and can be understood by all.</p>  
                 </li>
             </ul>
+            <a href="https://www.parisartweb.com/artists/sculpture/romero-britto/"></a>
         </article>
         <article class="clasico">
             <h2 class="vincentuno">Vincent van gogh </h2>
             <ul>
                 <li>
                     <img src="./Imagenes-para-proyecto/thebedroom.jpg" alt="Bedroom" class="bedroom">
-                    <p>To Van Gogh this picture was an expression of 'perfect rest', or 'sleep in general'. The bright, cheerful little room has become a field of rapid convergences, sharp angles, and contrasts of high color. The perspective vision of the walls and bed is as exciting as one of his deep landscapes, where we are carried headlong to the horizon. But in such a view with 'a rushing series of lines, furrows rising high on the canvas', Van Gogh found an expression of 'calmness, of great peace.' These surprising reactions permit us to see the spontaneous intensification of movement in his rendering of things. For his high-strung nature, the most relaxed perceptions were already charged and restless. But his feeling of repose in paintings so full of movement is also the outcome of a kind of cathartic process; by projecting movement into nature, he is relieved of tensions and wins a real peace.</p>
+                    <p class="animate__animated animate__flash">To Van Gogh this picture was an expression of 'perfect rest', or 'sleep in general'. The bright, cheerful little room has become a field of rapid convergences, sharp angles, and contrasts of high color. The perspective vision of the walls and bed is as exciting as one of his deep landscapes, where we are carried headlong to the horizon. But in such a view with 'a rushing series of lines, furrows rising high on the canvas', Van Gogh found an expression of 'calmness, of great peace.' These surprising reactions permit us to see the spontaneous intensification of movement in his rendering of things. For his high-strung nature, the most relaxed perceptions were already charged and restless. But his feeling of repose in paintings so full of movement is also the outcome of a kind of cathartic process; by projecting movement into nature, he is relieved of tensions and wins a real peace.</p>
                 </li>
                 <li>                
                     <img src="./Imagenes-para-proyecto/nocheestrellada.jpg" alt="Noche estrellada" class="noche">
-                    <p>Starry Night depicts a dreamy interpretation of the artist's asylum room's sweeping view of Saint-Rémy-de-Provence. Though Van Gogh revisited this scene in his work on several occasions, "Starry Night" is the only nocturnal study of the view. Thus, in addition to descriptions evident in the myriad of letters he wrote to his brother, Theo, it offers a rare nighttime glimpse into what the artist saw while in isolation. "Through the iron-barred window I can make out a square of wheat in an enclosure," he wrote in May of 1889, "above which in the morning I see the sunrise in its glory."</p>
+                    <p class="animate__animated animate__flash">Starry Night depicts a dreamy interpretation of the artist's asylum room's sweeping view of Saint-Rémy-de-Provence. Though Van Gogh revisited this scene in his work on several occasions, "Starry Night" is the only nocturnal study of the view. Thus, in addition to descriptions evident in the myriad of letters he wrote to his brother, Theo, it offers a rare nighttime glimpse into what the artist saw while in isolation. "Through the iron-barred window I can make out a square of wheat in an enclosure," he wrote in May of 1889, "above which in the morning I see the sunrise in its glory."</p>
                 </li>
                 <p>Vincent Willem van Gogh was a Dutch Post-Impressionist painter who is among the most famous and influential figures in the history of Western art. In just over a decade he created approximately 2100 artworks, including around 860 oil paintings, most of them in the last two years of his life.</p>
             </ul>
