--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria de Arte</title>
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Consultar si el orden de los links de animaciones y bootstrap afectan a la codificacion en general-->
 </head>
 <body>
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> 
     <!-- Preguntar si hay que poner algun texto que identifique el link de script-->
     <header class="animate__animated animate__bounce"> El arte expresado a traves de la niñez</header>
     <section>
@@ -47,20 +46,20 @@
                 </div>
                 </nav>
         </section>
-        <img src="./Imagenes-para-proyecto/vincentretrato.jpg" alt="Vincent" class="vincent">
+        <img src="./media/vincentretrato.jpg" alt="vincent" class="vincent">
     </section>
     <main>
         <section class="carrousel animate__animated animate__backInLeft">
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="./Imagenes-para-proyecto/friends.jpg" class="d-block" alt="...">
+                    <img src="./media/friends.jpg" class="d-block" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="./Imagenes-para-proyecto/peopleatpeace.jpg" class="d-block" alt="...">
+                    <img src="./media/peopleatpeace.jpg" class="d-block" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="./Imagenes-para-proyecto/hug.jpg" class="d-block" alt="...">
+                    <img src="./media/hug.jpg" class="d-block" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -97,11 +96,11 @@
             <h2 class="vincentuno">Vincent van gogh </h2>
             <ul>
                 <li>
-                    <img src="./Imagenes-para-proyecto/thebedroom.jpg" alt="Bedroom" class="bedroom">
+                    <img src="./media/thebedroom.jpg" alt="Bedroom" class="bedroom">
                     <p class="animate__animated animate__flash">To Van Gogh this picture was an expression of 'perfect rest', or 'sleep in general'. The bright, cheerful little room has become a field of rapid convergences, sharp angles, and contrasts of high color. The perspective vision of the walls and bed is as exciting as one of his deep landscapes, where we are carried headlong to the horizon. But in such a view with 'a rushing series of lines, furrows rising high on the canvas', Van Gogh found an expression of 'calmness, of great peace.' These surprising reactions permit us to see the spontaneous intensification of movement in his rendering of things. For his high-strung nature, the most relaxed perceptions were already charged and restless. But his feeling of repose in paintings so full of movement is also the outcome of a kind of cathartic process; by projecting movement into nature, he is relieved of tensions and wins a real peace.</p>
                 </li>
                 <li>                
-                    <img src="./Imagenes-para-proyecto/nocheestrellada.jpg" alt="Noche estrellada" class="noche">
+                    <img src="./media/nocheestrellada.jpg" alt="Noche estrellada" class="noche">
                     <p class="animate__animated animate__flash">Starry Night depicts a dreamy interpretation of the artist's asylum room's sweeping view of Saint-Rémy-de-Provence. Though Van Gogh revisited this scene in his work on several occasions, "Starry Night" is the only nocturnal study of the view. Thus, in addition to descriptions evident in the myriad of letters he wrote to his brother, Theo, it offers a rare nighttime glimpse into what the artist saw while in isolation. "Through the iron-barred window I can make out a square of wheat in an enclosure," he wrote in May of 1889, "above which in the morning I see the sunrise in its glory."</p>
                 </li>
                 <p>Vincent Willem van Gogh was a Dutch Post-Impressionist painter who is among the most famous and influential figures in the history of Western art. In just over a decade he created approximately 2100 artworks, including around 860 oil paintings, most of them in the last two years of his life.</p>
@@ -122,5 +121,6 @@
         <p class="footeruno">Contact Information</p>
         <p class="footeruno">©Copyright</p>
     </footer>
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
