--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
             <h2 class="romero">Romero Britto</h2>
             <ul class="romerofirst">
                 <li class="princessdiana">
-                    <img class="princessdianauno" src="./Imagenes-para-proyecto/pricessdiana-romero.jpg" alt="princessdiana">
+                    <img class="princessdianauno" src="./media/pricessdiana-romero.jpg" alt="princessdiana">
                     <p>Internationally, Romero Britto has exhibited in London, Stockholm, Madrid, Tokyo and Italy. His works are also popular with celebrities or renowned figures, some of which Romero Britto has based portraits on, such as Roger Federer, Dustin Hoffman, Arnold Schwarzenegger, Michael Jordan, Gloria Estefan, Andre Agassi, Eileen Guggenheim, David Rockfeller, and Senator Ted Kennedy. His most recent exhibition held in London was “Modern Icons”, hosted at Imitate Modern Gallery, from 16 November to 7 December 2011. The exhibition featured a series of portraits of the members of the British Royal family. The icons represented included The Duke and Duchess of Cambridge, HM Queen Elizabeth II, The Pope, Chairman Mao, Henry Matisse, Brigitte Bardot and Jesus. The portrait of the new British Royal couple was the highlight of the auction, and Britto commented: “It was wonderful to create their portrait, I just adore their love story and what they represent for all of us... love, longevity and history.”</p>
                 </li>
                 <li class="amor">
-                    <img class="amoruno" src="./Imagenes-para-proyecto/truelove.jpg" alt="amor">
+                    <img class="amoruno" src="./media/truelove.jpg" alt="amor">
                     <p>Revealed in peaceful, playful, sensual, and perpetually joyful themes, Romero Britto's people, animals, flowers, and sunsets reveal the enthusiastic potential of everyday experiences. "To achieve such airborne emotions, Romero Britto has invented his own pictorial language. With brilliant colors, harmonious shapes, and pleasing patterns, the art of Romero Britto is an art that demands to be taken on its own terms," says Eileen Guggenheim of Britto's art in the Museo de Bellas Artes in Rio de Janeiro, Brazil.</p>
                 </li>
                 <li class="formula">
-                    <img class="formulauno" src="./Imagenes-para-proyecto/theformulaofsuccess.jpg" alt="formula">
+                    <img class="formulauno" src="./media/theformulaofsuccess.jpg" alt="formula">
                     <p class="formulatext">Romero Britto's daring combinations of color, size, pattern and prospective are quite deliberate. The varied thickness of Britto's black outlines enhance the depth and form of his subjects. The precise stripes and polka dots create textures that further describe the subject matter as three-dimensional characters and places. Most distinctive is Romero Britto's own signature as a design element in each of his canvases since 1992. These elements combine to create a style that is fresh and invigorating and can be understood by all.</p>  
                 </li>
             </ul>
