--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <p class="formulatext">Romero Britto's daring combinations of color, size, pattern and prospective are quite deliberate. The varied thickness of Britto's black outlines enhance the depth and form of his subjects. The precise stripes and polka dots create textures that further describe the subject matter as three-dimensional characters and places. Most distinctive is Romero Britto's own signature as a design element in each of his canvases since 1992. These elements combine to create a style that is fresh and invigorating and can be understood by all.</p>  
                 </li>
             </ul>
-            <a href="https://www.parisartweb.com/artists/sculpture/romero-britto/"></a>
+            <a href="https://www.parisartweb.com/artists/sculpture/romero-britto/">Romero Britto</a>
         </article>
         <article class="clasico">
             <h2 class="vincentuno">Vincent van gogh </h2>
