--- a/index.html
+++ b/index.html
@@ -32,9 +32,26 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Biografia de artistas</a></li>
-                            <li><a class="dropdown-item" href="#">Obras famosas</a></li>
+                            <li><a class="dropdown-item" href="./pages/formulario.html">Contactanos</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Adaptaciones para el aula</a></li>
+                            <li><a class="dropdown-item" href="#"></a>
+                            <html>
+                                <head>
+                                    <meta charset="utf-8">
+                                    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                                    <title></title>
+                                    <meta name="description" content="">
+                                    <meta name="viewport" content="width=device-width, initial-scale=1">
+                                    <link rel="stylesheet" href="">
+                                </head>
+                                <body>
+                                    <!--[if lt IE 7]>
+                                        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+                                    <![endif]-->
+                                    
+                                    <script src="" async defer></script>
+                                </body>
+                            </html>">Adaptaciones para el aula</a></li>
                         </ul>
                         </li>
                     </ul>
@@ -54,6 +71,10 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                     <img src="./media/friends.jpg" class="d-block" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Looking Into The Future</h5>
+                        <p>By Romero Britto</p>
+                    </div>
                     </div>
                     <div class="carousel-item">
                     <img src="./media/peopleatpeace.jpg" class="d-block" alt="...">
@@ -108,14 +129,6 @@
             <a href="https://www.vincentvangogh.org/">Vincent Van Gogh</a>
         </article>
     </section>
-    <form class="formulariobasico" action="" method="post">
-        <label for="nombre">Nombre</label>
-        <input type="text" name="Nombre" id="nombreuno">
-        <label for="telefono">Telefono</label>
-        <input type="number" name="Telefono" id="telefonouno">
-        <label for="email">Email</label>
-        <input type="email" name="Email" id="emailuno">
-    </form>
     <footer>
         <p class="footeruno"> Created by Marcia Fernandez</p>
         <p class="footeruno">Contact Information</p>
