--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,11 +24,11 @@
         <h3 class="tag"><span>Hablemos</span></h3>
         <div class="input-group">
             <label for="nombre">Nombre Completo <span>*</span></label>
-            <input type="text" name="name2" id="nombre" placeholder="Insertar nombre" required>
-            <label for="telefono">Telefono <span>*</span></label>
-            <input type="number" name="telefono" id="telefono"  placeholder="Insertar telefono" required>
+            <input type="text" name="name2" id="nombre" placeholder="Insertar nombre">
+            <label for="telefono">Teléfono <span>*</span></label>
+            <input type="number" name="telefono" id="telefono" placeholder="Insertar teléfono">
             <label for="email">Email <span>*</span></label>
-            <input type="email" name="email" id="email" placeholder="Correo electronico" requireds>
+            <input type="email" name="email" id="email" placeholder="Correo electrónico">
         </div>
         <div class="mensaje">
             <label for="message">Mensaje</label>
@@ -36,5 +36,6 @@
         </div>
         <button type="submit" class="btn">Enviar</button>
     </form>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2477.0626537762346!2d-69.2194989234328!3d-51.622061441358696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbdb6f95163ab0c0b%3A0xc201541eb42a4611!2sZapiola%2063%2C%20Z9400%20R%C3%ADo%20Gallegos%2C%20Santa%20Cruz!5e0!3m2!1sen!2sar!4v1700050590769!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
