--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Preguntar si hay que poner algun texto que identifique el link de script-->
-    <header class="animate__animated animate__bounce"> El arte expresado a traves de la niñez</header>
+    <header class="animate__animated animate__bounce">El arte expresado a través de la niñez</header>
     <section>
         <section class="menudesplegable">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -130,10 +130,10 @@
         </article>
     </section>
     <footer>
-        <p class="footeruno"> Created by Marcia Fernandez</p>
+        <p class="footeruno">Created by Marcia Fernandez</p>
         <p class="footeruno">Contact Information</p>
-        <p class="footeruno">©Copyright</p>
+        <p class="footeruno">© Copyright</p>
     </footer>
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
